--- a/index.html
+++ b/index.html
@@ -1,35 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF--8" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arenal Conagui Lead Capture</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              primary: {
-                '50': '#ecfdf5',
-                '100': '#d1fae5',
-                '200': '#a7f3d0',
-                '300': '#6ee7b7',
-                '400': '#34d399',
-                '500': '#10b981',
-                '600': '#059669',
-                '700': '#047857',
-                '800': '#065f46',
-                '900': '#064e3b',
-                '950': '#022c22',
-              },
-            }
-          }
-        }
-      }
-    </script>
+    <link rel="stylesheet" href="/styles.css" />
   <script type="importmap">
 {
   "imports": {
