--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.76.1",
-    "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0"
+    "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.417.0"
   }
 }
 </script>
 </head>
-  <body class="bg-slate-900 text-slate-100">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
