feat: Update Firebase imports and improve LeadForm
Refactors Firebase import paths and updates the `LeadForm` component to correctly determine the current event day and slot. Also, adds necessary imports for database queries in `Settings.tsx`.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     "firebase/auth": "https://aistudiocdn.com/firebase@^10.12.4/firebase-auth.js",
     "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.417.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/",
-    "storage": "https://aistudiocdn.com/storage@^0.2.0",
-    "firestore": "https://aistudiocdn.com/firestore@^1.1.6"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
   }
 }
 </script>
