--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     "firebase/auth": "https://aistudiocdn.com/firebase@^10.12.4/firebase-auth.js",
     "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.417.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
   }
 }
 </script>
