--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.417.0",
     "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+    "firebase-admin/": "https://aistudiocdn.com/firebase-admin@^13.5.0/",
+    "firebase-functions": "https://aistudiocdn.com/firebase-functions@^6.6.0"
   }
 }
 </script>
